--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,16 @@
+body {
+  background-image: url("https://media.giphy.com/media/4QFdKe8O6lVO12HPsT/giphy.gif");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
 #game-wrapper {
-  margin: 40px auto;
+  margin: 200px auto;
   width: 500px;
   text-align: center;
   font-family: Consolas, Monaco, "Andale Mono", monospace;
+  background-color: #fdd;
+  padding: 20px;
 }
 
 #game-board,
@@ -22,9 +30,9 @@
 .tile,
 .button {
   -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
   -webkit-touch-callout: none;
 }
 
@@ -35,7 +43,9 @@
   line-height: 100px;
   font-size: 50px;
   background: #fff;
+  border: ghostwhite 0.1px solid;
 }
+
 .tile:hover:not(:empty) {
   cursor: pointer;
   transition: background 0.2s, -webkit-transform 0.2s;
@@ -46,7 +56,7 @@
 
 .win {
   -webkit-animation: winner 2s infinite;
-          animation: winner 2s infinite;
+  animation: winner 2s infinite;
 }
 
 .highlight,
@@ -60,27 +70,27 @@
 .highlight {
   background: #fff;
   -webkit-animation: highlight 0.4s;
-          animation: highlight 0.4s;
+  animation: highlight 0.4s;
 }
 
 .move-up {
   -webkit-transform: translateY(-100px);
-          transform: translateY(-100px);
+  transform: translateY(-100px);
 }
 
 .move-right {
   -webkit-transform: translateX(100px);
-          transform: translateX(100px);
+  transform: translateX(100px);
 }
 
 .move-down {
   -webkit-transform: translateY(100px);
-          transform: translateY(100px);
+  transform: translateY(100px);
 }
 
 .move-left {
   -webkit-transform: translateX(-100px);
-          transform: translateX(-100px);
+  transform: translateX(-100px);
 }
 
 .button {
@@ -89,6 +99,7 @@
   color: black;
   border: 2px solid black;
 }
+
 .button:hover {
   cursor: pointer;
 }
@@ -97,9 +108,11 @@
   0% {
     background: #fdd;
   }
+
   50% {
     background: #fff;
   }
+
   100% {
     background: #fdd;
   }
@@ -109,25 +122,31 @@
   0% {
     background: #fdd;
   }
+
   50% {
     background: #fff;
   }
+
   100% {
     background: #fdd;
   }
 }
+
 @-webkit-keyframes highlight {
   0% {
     background: #fdd;
   }
+
   100% {
     background: #fff;
   }
 }
+
 @keyframes highlight {
   0% {
     background: #fdd;
   }
+
   100% {
     background: #fff;
   }
